// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodes GET_CHILDREN_FAILURE 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": null,
    "isError": true,
    "isFetching": false,
    "parent": null,
  },
}
`;

exports[`nodes GET_CHILDREN_START 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": null,
    "isError": false,
    "isFetching": true,
    "parent": null,
  },
}
`;

exports[`nodes GET_CHILDREN_SUCCESS 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 3,
      "items": Array [
        3,
        4,
        5,
      ],
    },
    "data": null,
    "isError": false,
    "isFetching": false,
    "parent": null,
  },
  "3": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": Object {
      "id": 3,
    },
    "isError": false,
    "isFetching": false,
    "parent": 1,
  },
  "4": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": Object {
      "id": 4,
    },
    "isError": false,
    "isFetching": false,
    "parent": 1,
  },
  "5": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": Object {
      "id": 5,
    },
    "isError": false,
    "isFetching": false,
    "parent": 1,
  },
}
`;

exports[`nodes GET_PAGE_FAILURE 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": null,
    "isError": true,
    "isFetching": false,
    "parent": null,
  },
}
`;

exports[`nodes GET_PAGE_SUCCESS 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": Object {
      "meta": Object {
        "parent": Object {
          "id": 2,
        },
      },
    },
    "isError": false,
    "isFetching": false,
    "parent": 2,
  },
}
`;

exports[`nodes OPEN_EXPLORER 1`] = `
Object {
  "1": Object {
    "children": Object {
      "count": 0,
      "items": Array [],
    },
    "data": null,
    "isError": false,
    "isFetching": false,
    "parent": null,
  },
}
`;

exports[`nodes empty state 1`] = `Object {}`;
